--- a/printer.cfg
+++ b/printer.cfg
@@ -1,12 +1,13 @@
- # This file contains pin mappings for the Creality "v4.2.10" board. To
+# !CR-30 PrintMill
+# printer_size: 200x170x*
+# version: 3.6
+# This file contains pin mappings for the Creality CR-30 PrintMill v4.2.10 board. To
 # use this config, during "make menuconfig" select the STM32F103 with
 # a "28KiB bootloader" and serial (on USART1 PA10/PA9) communication.
 
 # If you prefer a direct serial connection, in "make menuconfig"
 # select "Enable extra low-level configuration options" and select
-# serial (on USART3 PB11/PB10), which is broken out on the 10 pin IDC
-# cable used for the LCD module as follows:
-# 3: Tx, 4: Rx, 9: GND, 10: VCC
+# serial (on USART3 PB11/PB10)
 
 # Flash this firmware by copying "out/klipper.bin" to a SD card and
 # turning on the printer with the card inserted. The firmware
@@ -15,145 +16,97 @@
 
 # See docs/Config_Reference.md for a description of parameters.
 
-[stepper_x]
-step_pin: PC2
-dir_pin: !PB9
-enable_pin: !PC3
-microsteps: 16
-rotation_distance: 40
-endstop_pin: ^!PA3
-position_endstop: 0
-position_max: 220
-homing_speed: 50
+###fluidd set
+[include cx_printer.cfg]
 
-[stepper_y]
-step_pin: PB8
-dir_pin: !PB7
-enable_pin: !PC3
-microsteps: 16
-rotation_distance: 40
-endstop_pin: ^!PA7
-position_endstop: 0
-position_max: 240
-homing_speed: 50
+[display_status]
+# for display messages in status panel
 
-[stepper_z]
-step_pin: PB6
-dir_pin: !PB5
-enable_pin: !PC3
-microsteps: 16
-rotation_distance: 2.75
-endstop_pin: ^!PA5
-position_endstop: 0
-position_min: -250
-position_max: 1000000
-
-[extruder]
-max_extrude_only_distance: 100.0
-max_extrude_cross_section: 2.0
-step_pin: PB4
-dir_pin: !PB3
-enable_pin: !PC3
-microsteps: 16
-rotation_distance: 23.0
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PA0
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC5
-min_temp: 0
-max_temp: 250
-pressure_advance: 0.50
+[pause_resume]
+# for pause/resume functionality. 
+# Mainsail/fluidd needs gcode macros for `PAUSE`, `RESUME` and `CANCEL_PRINT` to make the buttons work.
 
 [force_move]
 enable_force_move: True
 
-[filament_switch_sensor spool]
-pause_on_runout: True
-switch_pin: ^!PA6
+###################
+###   MACROS  #####
+###################
 
-[heater_bed]
-heater_pin: PA1
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC4
-min_temp: 0
-max_temp: 130
-
-# K-FAN1
-[fan]
-pin: PA2
-
-# K-FAN2
-[heater_fan extruder]
-pin: PC0
-heater: extruder
-heater_temp: 50.0
-
-# K-FAN3
-[temperature_fan mcu]
-pin: PC1
-sensor_type: temperature_mcu
-control: watermark
-min_temp: 0
-max_temp: 100
-target_temp: 30
-
-; Neopixel LED support
-; [neopixel led_neopixel]
-; pin: PC14
-
-; BL-touch
-; [bltouch]
-; control_pin: PB0
-; sensor_pin: PB1
-
-; TMC Uart Mod Pins:
-; https://github.com/adelyser/Marlin-CR30/wiki
-; [tmc2208 stepper_x]
-; uart_pin: PB0
-;
-; [tmc2208 stepper_y]
-; uart_pin: PB1
-;
-; [tmc2208 stepper_z]
-; uart_pin: PA13
-;
-; [tmc2208 extruder]
-; uart_pin: PA14
-
-[mcu]
-serial: /dev/ttyUSB0
-baud: 250000
-restart_method: command
-
-[display]
-lcd_type: st7920
-cs_pin: PB12
-sclk_pin: PB13
-sid_pin: PB15
-encoder_pins: ^PB14, ^PB10
-click_pin: ^!PB2
-
-[output_pin beeper]
-pin: PC6
-
-[printer]
-kinematics: corexy
-max_velocity: 300
-max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
-
-# Override to support unlimited belt size
-# (homing Z simply resets its virtual position to 0.0)
-[homing_override]
-axes: z
-set_position_z: 0
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+# change this if you need more or less extrusion
+variable_extrude: 1.0
 gcode:
-  {% if params.X is not defined and params.Y is not defined and params.Z is not defined %}G28 X0 Y0{% endif %}
-  {% if params.X is defined %}G28 X0{% endif %}
-  {% if params.Y is defined %}G28 Y0{% endif %}
-  G92 Z0
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  ##### set park positon for x and y #####
+  # default is your max posion from your printer.cfg
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  ##### calculate save lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set act_z = printer.toolhead.position.z|float %}
+  {% if act_z < (max_z - 2.0) %}
+      {% set z_safe = 2.0 %}
+  {% else %}
+      {% set z_safe = max_z - act_z %}
+  {% endif %}
+  ##### end of definitions #####
+  PAUSE_BASE
+  G91
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G1 E-{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G1 Z{z_safe} F900
+    G90
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %}
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  #### get VELOCITY parameter if specified ####
+  {% if 'VELOCITY' in params|upper %}
+    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+  {%else %}
+    {% set get_params = "" %}
+  {% endif %}
+  ##### end of definitions #####
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G91
+    G1 E{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  RESUME_BASE {get_params}
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G91
+    G1 Z4.5 F300
+    G90
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %}
+    G28 X Y
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+    G1 Y{y_park} F2000
+    M84
+  CANCEL_PRINT_BASE
 
 # Eject all printed parts from the belt
 [gcode_macro BED_EJECT]
@@ -164,57 +117,358 @@ gcode:
   G1 Z420 F4000 ; Unload belt
   G28 Z0 ; Re-home Z
 
-[virtual_sdcard]
-# for gcode upload
-path: /tmp
-
-[display_status]
-# for display messages in status panel
-
-[pause_resume]
-# for pause/resume functionality. 
-# Mainsail/fluidd needs gcode macros for `PAUSE`, `RESUME` and `CANCEL_PRINT` to make the buttons work.
-
-[gcode_macro PAUSE]
-rename_existing: BASE_PAUSE
-default_parameter_X: 100    #edit to your park position
-default_parameter_Y: 100    #edit to your park position
-default_parameter_E: 1      #edit to your retract length
+[gcode_macro UNLOCK_MOVES]
+description: "Unlock movement without homing (for setup/testing only)"
 gcode:
-    SAVE_GCODE_STATE NAME=PAUSE_state
-    BASE_PAUSE
-    G91
-    G1 E-{E} F2100
-    G90
-    G1 X{X} Y{Y} F6000
+  SET_KINEMATIC_POSITION X=0 Y=0 Z=0
 
-[gcode_macro RESUME]
-rename_existing: BASE_RESUME
-default_parameter_E: 1      #edit to your retract length
+
+###################
+### XYZ Stepper ###
+###################
+
+[stepper_x]
+step_pin: PB13
+dir_pin: PB12
+enable_pin: !PB14
+microsteps: 32  # Change to 16 for original steppers
+rotation_distance: 40 # Change to 80 for original steppers
+full_steps_per_rotation: 400  #Change to 200 for original steppers
+endstop_pin: ^!PC0
+position_endstop: 0
+position_min: -2
+position_max: 220
+homing_speed: 50
+
+[stepper_y]
+step_pin: PB10
+dir_pin: PB2
+enable_pin: !PB11
+microsteps: 32  # Change to 16 for original steppers
+rotation_distance: 40 # Change to 80 for original steppers
+full_steps_per_rotation: 400  #Change to 200 for original steppers
+#endstop_pin: ^PC1 # Normal y-endstop pin
+endstop_pin: ^!PC15 # Y-endstop in e0-endstop socket --> deactivated filament sensor
+position_endstop: 0
+position_min: -2
+position_max: 240
+homing_speed: 30
+
+[stepper_z]
+step_pin: PB0
+dir_pin: PC5
+enable_pin: !PB1
+microsteps: 16
+full_steps_per_rotation: 200
+#rotation_distance: 2.78
+rotation_distance: 2.75
+endstop_pin: ^!PC2
+position_endstop: 0
+position_min: -200
+position_max: 20000000
+
+[tmc2209 stepper_x]
+uart_pin: PC11
+tx_pin: PC10
+uart_address: 0
+run_current: 1.300
+interpolate: True
+#   If true, enable step interpolation (the driver will internally
+#   step at a rate of 256 micro-steps). This interpolation does
+#   introduce a small systemic positional deviation - see
+#   TMC_Drivers.md for details. The default is True.
+#   The amount of current (in amps RMS) to configure the driver to use
+#   during stepper movement. This parameter must be provided.
+#hold_current:
+#   The amount of current (in amps RMS) to configure the driver to use
+#   when the stepper is not moving. Setting a hold_current is not
+#   recommended (see TMC_Drivers.md for details). The default is to
+#   not reduce the current.
+sense_resistor: 0.110
+#   The resistance (in ohms) of the motor sense resistor. The default
+#   is 0.110 ohms.
+stealthchop_threshold: 999999
+#   The velocity (in mm/s) to set the "stealthChop" threshold to. When
+#   set, "stealthChop" mode will be enabled if the stepper motor
+#   velocity is below this value. The default is 0, which disables
+#   "stealthChop" mode.
+
+
+[tmc2209 stepper_y]
+uart_pin: PC11
+tx_pin: PC10
+uart_address: 2
+interpolate: True
+#   If true, enable step interpolation (the driver will internally
+#   step at a rate of 256 micro-steps). This interpolation does
+#   introduce a small systemic positional deviation - see
+#   TMC_Drivers.md for details. The default is True.
+run_current: 1.300
+#   The amount of current (in amps RMS) to configure the driver to use
+#   during stepper movement. This parameter must be provided.
+#hold_current:
+#   The amount of current (in amps RMS) to configure the driver to use
+#   when the stepper is not moving. Setting a hold_current is not
+#   recommended (see TMC_Drivers.md for details). The default is to
+#   not reduce the current.
+sense_resistor: 0.110
+#   The resistance (in ohms) of the motor sense resistor. The default
+#   is 0.110 ohms.
+stealthchop_threshold: 999999
+#   The velocity (in mm/s) to set the "stealthChop" threshold to. When
+#   set, "stealthChop" mode will be enabled if the stepper motor
+#   velocity is below this value. The default is 0, which disables
+#   "stealthChop" mode.
+
+[tmc2209 stepper_z]
+uart_pin: PC11
+tx_pin: PC10
+uart_address: 1
+interpolate: True
+#   If true, enable step interpolation (the driver will internally
+#   step at a rate of 256 micro-steps). This interpolation does
+#   introduce a small systemic positional deviation - see
+#   TMC_Drivers.md for details. The default is True.
+run_current: 0.700
+#   The amount of current (in amps RMS) to configure the driver to use
+#   during stepper movement. This parameter must be provided.
+#hold_current:
+#   The amount of current (in amps RMS) to configure the driver to use
+#   when the stepper is not moving. Setting a hold_current is not
+#   recommended (see TMC_Drivers.md for details). The default is to
+#   not reduce the current.
+sense_resistor: 0.110
+#   The resistance (in ohms) of the motor sense resistor. The default
+#   is 0.110 ohms.
+stealthchop_threshold: 0
+#   The velocity (in mm/s) to set the "stealthChop" threshold to. When
+#   set, "stealthChop" mode will be enabled if the stepper motor
+#   velocity is below this value. The default is 0, which disables
+#   "stealthChop" mode.
+
+[tmc2209 extruder]
+uart_pin: PC11
+tx_pin: PC10
+uart_address: 3
+interpolate: True
+#   If true, enable step interpolation (the driver will internally
+#   step at a rate of 256 micro-steps). This interpolation does
+#   introduce a small systemic positional deviation - see
+#   TMC_Drivers.md for details. The default is True.
+run_current: 0.500
+#   The amount of current (in amps RMS) to configure the driver to use
+#   during stepper movement. This parameter must be provided.
+#hold_current:
+#   The amount of current (in amps RMS) to configure the driver to use
+#   when the stepper is not moving. Setting a hold_current is not
+#   recommended (see TMC_Drivers.md for details). The default is to
+#   not reduce the current.
+sense_resistor: 0.110
+#   The resistance (in ohms) of the motor sense resistor. The default
+#   is 0.110 ohms.
+stealthchop_threshold: 0
+#   The velocity (in mm/s) to set the "stealthChop" threshold to. When
+#   set, "stealthChop" mode will be enabled if the stepper motor
+#   velocity is below this value. The default is 0, which disables
+#   "stealthChop" mode.
+
+
+################
+### NEOPIXEL ###
+################
+
+#Not added yet
+#[neopixel neopixel]
+#pin: PA8
+#chain_count: 58
+#color_order: GRBW
+#   Set the pixel order required by the LED hardware (using a string
+#   containing the letters R, G, B, W with W optional). Alternatively,
+#   this may be a comma separated list of pixel orders - one for each
+#   LED in the chain. The default is GRB.
+#initial_RED: 1.0
+#initial_GREEN: 0.2
+#initial_BLUE: 1.0
+#initial_WHITE: 1.0
+
+
+[filament_switch_sensor filament_sensor]
+pause_on_runout: True
+switch_pin: ^!PA6
+
+[idle_timeout]
+timeout: 172800
+
+######################
+### PRINTER BASICS ###
+######################
+
+[printer]
+kinematics: corexy # https://klipper.discourse.group/t/independant-acceleration-limits-for-x-and-y-axes/3831/2
+max_velocity: 300
+max_accel: 8000
+max_z_velocity: 12
+max_z_accel: 50
+square_corner_velocity: 5.0
+
+[extruder]
+step_pin: PB3
+dir_pin: PB4
+enable_pin: !PD1
+microsteps: 16
+full_steps_per_rotation: 200
+
+rotation_distance: 22.48094064725844 #Clockwork2
+gear_ratio: 50:10 #Clockwork2
+
+#rotation_distance: 22.6789 #BMG Extruder
+#gear_ratio: 50:17 #BMG Extruder
+
+#rotation_distance: 7.711 #Original Extruder
+
+nozzle_diameter: 0.600
+filament_diameter: 1.750
+heater_pin: PC8
+sensor_type: ATC Semitec 104GT-2
+#sensor_type: EPCOS 100K B57560G104F #Original
+sensor_pin: PA0
+control: pid
+pid_kp = 32.566
+pid_ki = 2.412
+pid_kd = 109.910
+min_temp: -270
+max_temp: 360
+max_power: 1.0
+min_extrude_temp: 170
+max_extrude_only_distance: 3000.0
+pressure_advance: 0.020000
+pressure_advance_smooth_time: 0.01
+
+[heater_bed]
+heater_pin: PC9
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: PC4
+control: pid
+pid_Kp: 54.027
+pid_Ki: 0.770
+pid_Kd: 948.182
+min_temp: 0
+max_temp: 130
+
+######################
+####### FANS #########
+######################
+
+# K-FAN1
+[fan]
+pin: PC7
+
+# K-FAN2
+[heater_fan Hotend]
+pin: PC6
+max_power: 1.0
+shutdown_speed: 0.0
+#cycle_time:
+#hardware_pwm:
+#kick_start_time:
+off_below: 0.1
+#tachometer_pin:
+#tachometer_ppr:
+#tachometer_poll_interval:
+#enable_pin:
+#   See the "fan" section for a description of the above parameters.
+heater: extruder
+#   Name of the config section defining the heater that this fan is
+#   associated with. If a comma separated list of heater names is
+#   provided here, then the fan will be enabled when any of the given
+#   heaters are enabled. The default is "extruder".
+heater_temp: 70.0
+#   A temperature (in Celsius) that the heater must drop below before
+#   the fan is disabled. The default is 50 Celsius.
+fan_speed: 1.0
+#   The fan speed (expressed as a value from 0.0 to 1.0) that the fan
+#   will be set to when its associated heater is enabled. The default
+#   is 1.0
+
+# K-FAN3
+[controller_fan Mainboard]
+pin: PB15
+max_power: 1.0
+shutdown_speed: 0.0
+#cycle_time:
+#hardware_pwm:
+#kick_start_time: 1
+off_below: 0.2
+#tachometer_pin:
+#tachometer_ppr:
+#tachometer_poll_interval:
+#enable_pin:
+#   See the "fan" section for a description of the above parameters.
+fan_speed: 0.5
+#   The fan speed (expressed as a value from 0.0 to 1.0) that the fan
+#   will be set to when a heater or stepper driver is active.
+#   The default is 1.0
+idle_timeout: 300
+#   The amount of time (in seconds) after a stepper driver or heater
+#   was active and the fan should be kept running. The default
+#   is 30 seconds.
+idle_speed: 0.2
+#   The fan speed (expressed as a value from 0.0 to 1.0) that the fan
+#   will be set to when a heater or stepper driver was active and
+#   before the idle_timeout is reached. The default is fan_speed.
+#heater:
+stepper: stepper_x
+
+[mcu]
+serial: /dev/serial/by-id/usb_serial_1
+restart_method: command
+
+# [mcu rpi]
+# serial: /tmp/klipper_host_mcu
+
+# [adxl345]
+# cs_pin: rpi:None
+# spi_speed: 2000000
+# spi_bus: spidev2.0
+
+# [resonance_tester]
+# accel_chip: adxl345
+# accel_per_hz: 70
+# probe_points:
+#    125,125,10
+
+[bed_screws]
+screw1: 10, 0.725
+screw2: 190, 0.725
+screw3: 190, 190
+screw4: 10, 190
+
+[printer]
+kinematics: corexy
+max_velocity: 300
+max_accel: 5000
+max_z_velocity: 5
+max_z_accel: 100
+square_corner_velocity: 5.0
+
+# Override to support unlimited belt size
+# (homing Z simply resets its virtual position to 0.0)
+[homing_override]
+axes: z
+set_position_z: 0
 gcode:
-    G91
-    G1 E{E} F2100
-    G90
-    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    BASE_RESUME
+  {% if printer.homed_axes != 'XYZ' %}
+    # status_homing
+    M117 Homing
+    RESPOND MSG="Homing"
+    {% if params.X is not defined and params.Y is not defined and params.Z is not defined %}G28 X0 Y0{% endif %}
+    {% if params.X is defined %}G28 X0{% endif %}
+    {% if params.Y is defined %}G28 Y0{% endif %}
+    G92 Z0
+  {% endif %}
+  G92 Z0
 
-[gcode_macro CANCEL_PRINT]
-rename_existing: BASE_CANCEL_PRINT
-gcode:
-    TURN_OFF_HEATERS
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    BASE_CANCEL_PRINT
 
-[menu __main __octoprint]
-type: disabled
-
-[menu __main __control __eject]
-type: command
-enable: {not printer.idle_timeout.state == "Printing"}
-name: Bed Eject
-gcode:
-  BED_EJECT
 
 # Enable SD file loop support
 [sdcard_loop]
@@ -226,17 +480,10 @@ gcode:
     {% if params.K is not defined and params.L is not defined %}SDCARD_LOOP_END{% endif %}
     {% if params.K is defined and params.L is not defined %}SDCARD_LOOP_DESIST{% endif %}
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 22.120
-#*# pid_ki = 1.460
-#*# pid_kd = 83.778
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 66.633
-#*# pid_ki = 1.516
-#*# pid_kd = 732.132
+[gcode_arcs]
+#resolution: 1.0
+[exclude_object]
+
+
+[include timelapse.cfg]
+[include cx_gmcro.cfg]
